--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -23,6 +23,7 @@ surrealdb = { version = "2", features = ["kv-surrealkv"], default-features = fal
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+json5 = "1"
 thiserror = "2"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1", features = ["v4", "serde"] }
